unpackaged/main/default/objects/pse__Utilization_Detail__c/fields/FFX_Remaining_Capacity__c.field-meta.xml
<CustomField>
    <fullName>FFX_Remaining_Capacity__c</fullName>
    <formula>IF(pse__Scheduled_Calendar_Hours__c&gt;0,FFX_Remaining_Capacity_hours__c/pse__Scheduled_Calendar_Hours__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>