unpackaged/main/default/objects/pse__Utilization_Detail__c/fields/FFX_Remaining_Capacity_hours__c.field-meta.xml
<CustomField>
    <fullName>FFX_Remaining_Capacity_hours__c</fullName>
    <formula>pse__Scheduled_Calendar_Hours__c - (pse__Scheduled_Billable_Hours__c + pse__Scheduled_Non_Billable_Hours__c + pse__Scheduled_Excluded_Hours__c + pse__Scheduled_Credited_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Capacity hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>