unpackaged/main/default/objects/pse__Utilization_Detail__c/listViews/Resources_Below_Utili_Target_Group.listView-meta.xml
<ListView>
    <fullName>Resources_Below_Utili_Target_Group</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5 AND 6 and 7</booleanFilter>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Time_Period__c</columns>
    <columns>pse__Utilization_Target_Attainment__c</columns>
    <columns>pse__Utilization_Target__c</columns>
    <columns>pse__Total_Utilization__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Historical_Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>pse__Scheduled_Start_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <filters>
        <field>pse__Is_Report_Master__c</field>
        <operation>equals</operation>
        <value>true</value>
    </filters>
    <filters>
        <field>pse__Time_Period_Type__c</field>
        <operation>equals</operation>
        <value>Month</value>
    </filters>
    <filters>
        <field>pse__Type__c</field>
        <operation>equals</operation>
        <value>Resource</value>
    </filters>
    <filters>
        <field>pse__Utilization_Target_Attainment__c</field>
        <operation>lessOrEqual</operation>
        <value>90.0</value>
    </filters>
    <filters>
        <field>MyRegion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Resources Below Utili Target (Region)</label>
</ListView>